added links and changed landing page ui

--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
     <section class="landing-display">
       <div class="display-text">
         <div class="larger-text">
-          <p>Get <span>MAXIMUM</span></p>
-          <p>Discount</p>
-          <p>Now</p>
+          <p>Get</p>
+          <p><span>MAXIMUM DISCOUNT</span></p>
+          <p>On All Coding Ninja Courses</p>
         </div>
         <p class="text-coupon-code">Use Coupon Code: <span>WVGAN</span></p>
         <div class="smaller-text">
@@ -142,8 +142,22 @@
             WVGAN<i class="fa-regular fa-copy"></i>
           </div>
         </div>
+        <a href="https://wa.me/918433385939" target="_blank" class="whatsapp">
+          <img src="./assests/icons/whatsapp.png" />
+          <p>For any Queries</p>
+        </a>
       </div>
       <div class="display-img">
+        <a
+          href="https://www.codingninjas.com/?referralCode=WVGAN"
+          target="_blank"
+        >
+          <img
+            src="./assests/images/coding_ninjas_logo.png"
+            alt="coding ninjas logo"
+            class="cn-logo"
+          />
+        </a>
         <img
           src="./assests/images/display-section.png"
           alt="person working in a laptop"
@@ -162,7 +176,11 @@
         <span> UPTO 100% Scholarship </span>
         on any course by Coding Ninjas
       </div>
-      <a href="#" class="reg-now">Register Now For FREE</a>
+      <a
+        href="https://www.codingninjas.com/landing/scholarship-test/"
+        class="reg-now"
+        >Register Now For FREE</a
+      >
       <div class="info">
         <div class="brackets">
           <p>Scholarship Brackets</p>
@@ -186,7 +204,12 @@
           </ul>
         </div>
       </div>
-      <a href="#" target="_blank" class="more-details-btn">For More Details</a>
+      <a
+        href="https://www.codingninjas.com/landing/scholarship-test/"
+        target="_blank"
+        class="more-details-btn"
+        >For More Details</a
+      >
     </section>
     <!-- Scholarship section Ends -->
 
@@ -270,14 +293,7 @@
         Begin the journey for your dream job with these specializations. Start
         strong. Build a strong foundation with these courses
       </p>
-      <div class="premium-courses">
-        <a href="#" class="course-card">
-          <div class="course-icon">
-            <img src="./assests/icons/cpp-ds-logo.png" alt="CPP Logo" />
-          </div>
-          <div class="course-name">C++ & Data Structures</div>
-        </a>
-      </div>
+      <div class="premium-courses"></div>
       <h2>Exclusive Offering Included With All Premium Courses</h2>
       <div class="offerings">
         <!-- <div class="offering-card">
@@ -363,7 +379,12 @@
             An already offered discount ranges from 10% to 30%. This is subject
             to change from time to time depending on the starting date.
           </div>
-          <a href="#" class="btn">CHECK ONGOING DISCOUNT</a>
+          <a
+            href="https://www.codingninjas.com/?referralCode=WVGAN"
+            target="_blank"
+            class="btn"
+            >CHECK ONGOING DISCOUNT</a
+          >
         </div>
         <div class="dw-card">
           <div class="icon">
@@ -375,7 +396,12 @@
             course purchase will become more affordable if you refer your
             friends.
           </div>
-          <a href="#" class="btn">GET MY REFERRAL</a>
+          <a
+            href="https://www.codingninjas.com/?referralCode=WVGAN"
+            target="_blank"
+            class="btn"
+            >GET MY REFERRAL</a
+          >
         </div>
         <div class="dw-card">
           <div class="icon">
@@ -386,7 +412,12 @@
             There are coding events and scholarship tests organized by Coding
             Ninjas from time to time. Their dates are listed on their website.
           </div>
-          <a href="#" class="btn">CHECK LIVE EVENTS</a>
+          <a
+            href="https://www.codingninjas.com/events?event_category=ALL_EVENTS&event_sub_category=Archived&page=1#eventsWrapper"
+            target="_blank"
+            class="btn"
+            >CHECK LIVE EVENTS</a
+          >
         </div>
       </div>
       <div class="steps-to-avail">
@@ -412,15 +443,17 @@
             <p class="step-num">3</p>
             <div class="title">Apply Discount</div>
             <div class="desc">
-              Open this <a href="#">coupon link</a>. This will automatically add
-              the discount coupon.
+              Open this
+              <a href="https://www.codingninjas.com/?referralCode=WVGAN"
+                >coupon link</a
+              >. This will automatically add the discount coupon.
             </div>
           </div>
           <div class="step">
             <p class="step-num">4</p>
             <div class="title">Use My Refferal</div>
             <div class="desc">
-              On checkout, add this referral code: <span>CODE HERE</span> on the
+              On checkout, add this referral code: <span>WVGAN </span> on the
               apply coupon code box.
             </div>
           </div>
@@ -585,8 +618,12 @@
           <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
         </div>
         <div class="icons-2">
-          <a href="#"><i class="fa-solid fa-envelope"></i></a>
-          <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+          <a href="mailto:hemantupadhyay9999@gmail.com" target="_blank"
+            ><i class="fa-solid fa-envelope"></i
+          ></a>
+          <a href="https://wa.me/918433385939" target="_blank"
+            ><i class="fa-brands fa-whatsapp"></i
+          ></a>
           <a href="#"><i class="fa-solid fa-user-ninja"></i></a>
         </div>
       </div>
