add google verification meta tag

--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="google-site-verification"
-      content="3bJ2Lku07VOlA6OgPRrzsu2_MXHUmJHZE355SDKZPqE"
-    />
+    <meta name="google-site-verification" content="RmFvHL2KYg4Hylk5NvboR31E0TNMYr1W-t2EqPk5uk8" />
     <meta
       name="description"
       content='Utilize Coding Ninjas Coupon Code: "WVGAN" to receive a 70% Referral Discount and a savings of around Rs 5,000 on all Coding Ninjas Courses. Best Coupon Code to use to get the maximum discount.'
