corrected typo in title tag

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     />
     <!-- meta tages for twitter tags ends -->
     <!-- Meta Tags Ends -->
-    <title>Coding Ninja Offers</title>
+    <title>Coding Ninjas Offers</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <!-- Font awesome CDN -->
     <link
