added more keywords in meta tah

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <meta
       name="keywords"
-      content="coding ninjas coupon code, coupon code for coding ninjas, coding ninjas referral code, coding ninjas referral, coding ninjas coupon, coding ninjas coupons, coding ninjas 12% discount, coding ninjas maximum discount, coding ninjas discounts, coding ninjas discount, coding ninjas coupons, coding ninjas coupon, coding ninjas coupon code, coding ninjas referral, coding ninjas referral discounts, coding ninjas referral code, coding ninjas discount 2022, coding ninjas discount 2021, coding ninjas discount 2023"
+      content="coding ninjas coupon code, coupon code for coding ninjas, coding ninjas referral code, coding ninjas referral, coding ninjas coupon, coding ninjas coupons, coding ninjas 12% discount, coding ninjas maximum discount, coding ninjas discounts, coding ninjas discount, coding ninjas coupons, coding ninjas coupon, coding ninjas coupon code, coding ninjas referral, coding ninjas referral discounts, coding ninjas referral code, coding ninjas discount 2022, coding ninjas discount 2021, coding ninjas discount 2023,coding ninjas coupon code,coding ninjas coupons,coding ninjas courses,code ninja course,top follow referral codes,ninja codes,learn code online coupon code,careerwill coupon code,top follow referral code list,referral promo code,top follow referral code list 2021,codebinx,coupon code for careerwill app,careerwill referral code,discount courses,max coupon code,how to create android apps without coding advance course coupon,the complete android kotlin developer course coupon,promo code for max,referral promotion code"
     />
     <meta property="og:site_name" content="Coding Ninjas Offers" />
     <meta property="og:locale" content="en_US" />
