script to update copy right year

--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
       </div>
       <div class="info">
         <p>Transforming Tech education for next generation of developers</p>
-        <p>© copy right 2022 | All Right Reseved</p>
+        <p>© copy right <span class="copy-right-year"></span> | All Right Reseved</p>
       </div>
       <div class="follow-me">
         <div class="text">Follow Me</div>
