added vedio section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="google-site-verification" content="RmFvHL2KYg4Hylk5NvboR31E0TNMYr1W-t2EqPk5uk8" />
+    <meta
+      name="google-site-verification"
+      content="RmFvHL2KYg4Hylk5NvboR31E0TNMYr1W-t2EqPk5uk8"
+    />
     <meta
       name="description"
       content='Utilize Coding Ninjas Coupon Code: "WVGAN" to receive a 70% Referral Discount and a savings of around Rs 5,000 on all Coding Ninjas Courses. Best Coupon Code to use to get the maximum discount.'
@@ -70,6 +73,7 @@
     <link rel="stylesheet" href="./assests/styles/faq.css" />
     <link rel="stylesheet" href="./assests/styles/footer.css" />
     <link rel="stylesheet" href="./assests/styles/proofs.css" />
+    <link rel="stylesheet" href="./assests/styles/yt-vedio.css" />
 
     <!-- Javascript Files -->
     <script src="./assests/scripts/script.js" defer></script>
@@ -162,6 +166,22 @@
       </div>
     </section>
     <!-- Landing Display Ends -->
+
+    <!-- YouTube Video Section Starts -->
+    <!-- <section class="yt-vedio">
+      <h2 class="tag-line">A Quick <span>Demo</span></h2>
+      <div class="vedio-container">
+        <iframe
+          height="315"
+          src="https://www.youtube.com/embed/7emz4zZ226E"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
+      </div>
+    </section> -->
+    <!-- YouTube Video Section Ends -->
 
     <!-- Scholarship section Starts -->
     <section class="scholarship" id="scholarship">
@@ -605,7 +625,9 @@
       </div>
       <div class="info">
         <p>Transforming Tech education for next generation of developers</p>
-        <p>© copy right <span class="copy-right-year"></span> | All Right Reseved</p>
+        <p>
+          © copy right <span class="copy-right-year"></span> | All Right Reseved
+        </p>
       </div>
       <div class="follow-me">
         <div class="text">Follow Me</div>
